fixing issues with scroll animation on small screens

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,7 +4,7 @@
 
 html,
 body {
-  @apply flex w-screen bg-white antialiased outline-none;
+  @apply flex w-screen bg-white antialiased outline-none scrollbar-none;
 }
 
 #__next {
